fix(cli-connector): switch chain networks reliably, fix connector not working on firefox (#994)
* fix(cli-connector): switch chain networks reliably, fix connector not working on firefox

* don't suggest to switch network if user canceled

--- a/packages/cli-connector/src/index.css
+++ b/packages/cli-connector/src/index.css
@@ -60,7 +60,7 @@ summary {
   cursor: pointer;
 }
 
-.sendTransactionButton {
+.button {
   appearance: none;
   display: flex;
   justify-content: center;
@@ -74,7 +74,7 @@ summary {
   font-size: inherit;
 }
 
-.sendTransactionButton_disabled {
+.button_disabled {
   cursor: wait;
   opacity: 0.5;
 }
